fix excess scrollbar

--- a/style.css
+++ b/style.css
@@ -286,7 +286,7 @@ header {
 }
 
 main {
-  height: 95vh;
+  height: 90vh;
   display: flex;
   align-items: center;
 }
